fix(): fix overflow text in User and Operations modules

--- a/mirrorgate-dashboard/src/sass/components/_operations-metrics.scss
+++ b/mirrorgate-dashboard/src/sass/components/_operations-metrics.scss
@@ -25,7 +25,6 @@
     .stats-desc {
         color: $dark-grey;
         display: inline-block;
-        padding-top: 10px;
-        padding-bottom: 40px;
+        padding: 10px 0;
     }
 }
